# llmb-project-group-1

./: .gitignore  README.md  esgenius_pdf_downloader.py  inspect_entity_pools.py  inspect_models.py  license  llms4ba.ipynb  main.py  pyproject.toml  test_model2.py
datasets/experiments/llm/classification/: esgenius_classification_20260624_151527.csv  esgenius_classification_20260625_172036.csv  llm_predictions_20260623_214323.csv  llm_predictions_20260624_103748.csv
lib/evaluation/: __init__.py  clear.py  drift.py  footprint.py  scoring.py
lib/llm/: llm_client.py
lib/perturbation/: __init__.py
lib/perturbation/boolean/: __init__.py  boolean_pertubators.py
lib/perturbation/categorical/: __init__.py  categorical_pertubators.py
lib/perturbation/complex/: complex_pertubators.py
lib/perturbation/datetime/: __init__.py  datetime_pertubators.py
lib/perturbation/domain/: __init__.py  esg_pertubators.py  mcq_pertubators.py
lib/perturbation/numerical/: __init__.py  numerical_pertubators.py
lib/perturbation/text/: __init__.py  character_pertubators.py  entity_pertubators.py  semantic_pertubators.py  sentence_pertubators.py  token_pertubators.py
lib/perturbation/timedelta/: __init__.py  timedelta_pertubators.py
lib/pipeline/: pipeline.py  run_logger.py
notebooks/: main.ipynb
notebooks/agent/: capabilities.ipynb  coordination.ipynb  evaluation.ipynb  extraction.ipynb  insights.ipynb
notebooks/llm/: classification.ipynb  evaluation.ipynb  reasoning.ipynb
notebooks/perturbation/: perturbation_engine.ipynb
(+5 files in other folders)
