[project]
name = "llmb-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.14",
    "tqdm>=4.68.3",
]
